--- a/實驗記錄.md
+++ b/實驗記錄.md
@@ -16,5 +16,10 @@
 
 [連結](https://hackmd.io/@eMP9zQQ0Qt6I8Uqp2Vqy6w/SyiOheL5N/%2FBVqowKshRH246Q7UDyodFA#MarkDown%E8%AA%9E%E6%B3%95%E5%A4%A7%E5%85%A8)
 
-![alt text](image.png)
+`行內程式碼`
+``` C++
+段落程式碼
+#include<iostream>
+```
+# 2
 
